# figtree

./: .gitignore  .projections.json  .travis.yml  CMakeLists.txt  README.md  figtree.pyx  setup.py
cmake/: FindFlann.cmake
include/: CMakeLists.txt
python/: figtree.pyx  setup.py
samples/: CMakeLists.txt  sample.cpp
scripts/: build_and_test.sh  install_flann.sh
src/: CMakeLists.txt  center_monomials.cpp  center_monomials.hpp  choose_parameters.cpp  choose_parameters.hpp  cluster.cpp  cluster.hpp  constant_series.cpp  constant_series.hpp  error_bound.hpp  figtree.cpp  matrix.cpp  matrix.hpp  nchoosek.hpp  p_max_total.hpp  radius_bounds.cpp  radius_bounds.hpp  truncation.cpp  truncation.hpp  truncation_ranges.cpp  truncation_ranges.hpp
test/: CMakeLists.txt  center_monomials_test.cpp  choose_parameters_test.cpp  cluster_test.cpp  constant_series_test.cpp  error_bound_test.cpp  fixtures.hpp  matrix_test.cpp  nchoosek_test.cpp  radius_bounds_test.cpp  truncation_ranges_test.cpp  truncation_test.cpp
